# ChangeLog for dev-qt/qt-creator
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qt-creator/ChangeLog,v 1.32 2014/08/05 11:41:54 pesa Exp $

  05 Aug 2014; Davide Pesavento <pesa@gentoo.org> qt-creator-3.2.0_rc1.ebuild:
  Tweak sed expression to correctly disable clang plugin. Bug 519030 by Uwe L.
  Korn.

  03 Aug 2014; Davide Pesavento <pesa@gentoo.org> -qt-creator-3.0.1.ebuild,
  metadata.xml, qt-creator-3.2.0_rc1.ebuild:
  Switch to qmake-utils eclass; always enable fakevim plugin; add slot operator
  to clang dep; require Qt 4.8.5; fix LLVM_INSTALL_DIR.

*qt-creator-3.2.0_rc1 (03 Aug 2014)

  03 Aug 2014; Jason A. Donenfeld <zx2c4@gentoo.org>
  +qt-creator-3.2.0_rc1.ebuild, metadata.xml:
  Bump version. Note that this is still masked, as it's related to Qt5.

*qt-creator-3.0.1 (03 Mar 2014)

  03 Mar 2014; Davide Pesavento <pesa@gentoo.org> +qt-creator-3.0.1.ebuild,
  -qt-creator-3.0.0.ebuild:
  Version bump.

  21 Dec 2013; Davide Pesavento <pesa@gentoo.org> -qt-creator-2.7.0.ebuild:
  old

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> qt-creator-2.8.1.ebuild:
  Stable for ppc, wrt bug #486468

*qt-creator-3.0.0 (19 Dec 2013)

  19 Dec 2013; Davide Pesavento <pesa@gentoo.org> +qt-creator-3.0.0.ebuild,
  -qt-creator-3.0.0_rc1.ebuild:
  Version bump.

*qt-creator-3.0.0_rc1 (29 Nov 2013)

  29 Nov 2013; Davide Pesavento <pesa@gentoo.org> +qt-creator-3.0.0_rc1.ebuild,
  -qt-creator-3.0.0_beta.ebuild:
  Version bump.

*qt-creator-3.0.0_beta (23 Oct 2013)

  23 Oct 2013; Davide Pesavento <pesa@gentoo.org> +qt-creator-3.0.0_beta.ebuild,
  metadata.xml:
  Version bump.

  30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> qt-creator-2.8.1.ebuild:
  Stable for x86, wrt bug #486468

  29 Sep 2013; Agostino Sarubbo <ago@gentoo.org> qt-creator-2.8.1.ebuild:
  Stable for amd64, wrt bug #486468

  29 Sep 2013; Davide Pesavento <pesa@gentoo.org> -qt-creator-2.5.2.ebuild,