@@ -2,27 +2,27 @@
 Hash: SHA256
 
 DIST qt-creator-2.8.1-src.tar.gz 24381282 SHA256 d5ae007a297a4288d0e95fd605edbfb8aee80f6788c7a6cfb9cb297f50c364b9 SHA512 954b0caa9a4c6b7debf62562f3c8f1b4edee13488867208e7d41544b244a111024f2c4c144e4b44e98973cf1d7b5885c13c0b6996ade58e204887eb13bb999cb WHIRLPOOL 1aa5018e19315bd2528580ffa388ff17d96666747e4abad28ea4bcd38315e6efc66379cdda90cb32c17dd1631d0ebedff422e53ee0b9b3c40d7a5766ff4dd9b4
-DIST qt-creator-opensource-src-3.2.0-rc1.tar.gz 23373007 SHA256 43e8b7f9ad59f7178eeaa6cc2a1c6ccb9330fe47a6eacd79d08c48d4382d463e SHA512 0a7c25562c3732390dda40c9ef68bca5d4c9f7a58cb4e34440b6b107942108c534f847aff7d6708568373a721948004da8b07a8bb47cf926c784be942e4ebb0f WHIRLPOOL d9f4d627fbb8d042559b5ec961289c6ebed07cfb81ac5f49052ea23e44ec40da72207ee6b7787e64818b8a69e50057beff35aa2e4384bf80e1ec6679036759f0
+DIST qt-creator-opensource-src-3.2.0.tar.gz 22720440 SHA256 ed47be98726050d55c0b955cea16a544292f7172442abac1153c1caac1a2313e SHA512 24e7b2f0bc964eea93d5ad3d12d3f3bda68a7579e330bec2de62b1f8f0297f51dc65ef35308de2d84b7ee7086d19159d81dfcba4eae08fdbde512ddf7c25a42f WHIRLPOOL 79c7d1fc7556a8ca72f9268bb6865254785fdcc33949bbb06394cdd37a5546930a5f1f8ebcd2532e72fdb931e08bd624bbbe90a86f4d1d936ada716514290961
 EBUILD qt-creator-2.8.1.ebuild 3252 SHA256 28cb33cdf81c8555ac52702c815b6b2eb8967c56c50e4e9ae2c5ebac7c99d5f8 SHA512 5cdc91c9530984bf16c266809a09be7d3b0d5f7195f20091d444575d344f37cb06828f67eb3a7b3cfbb7103d0e879980893fed0a5cae722f8c5beea90f7c4376 WHIRLPOOL 87f87896456df7fa9c054813db4e8aa46dd87bf58221103986ebcb667ec491ddb980f0706632f13a84b35f0ec52714ed46f8018d49e87950ee01f0b355f47f4d
-EBUILD qt-creator-3.2.0_rc1.ebuild 3349 SHA256 82d8c8310523926c18e4a61961cc76c36093468cf96371bb7ef006584c4b8dfb SHA512 fa18be67378c363f2df583c35b593fdb965e8006cf9e22eb18640885757964dcce2320bedc40fc25bef735434e64be65275f1fb1580e5478f08c6ce494350f09 WHIRLPOOL e034148c79bb9182a7c0f7b12d00af68d1aa0ab34e0e67a48e9bf8b16fc3ff2c501442aa72422aef25423a01c59cde7e4f44a545cf7b34c9b97e0b7291096c52
-MISC ChangeLog 26280 SHA256 7c7f13b6ec28c8dd848b0b389df4f35c70d962c594deda0d359732e0293d8613 SHA512 5d254334bb4147f20eb2fa0f03b90cd0fbeba58d3fa4d5b0ba7328b0908442db54a3b8314dc47c84cee276482a01dbbb131695bfd16bafdb71aaaa9017f08e19 WHIRLPOOL 9b8ef981bdc5865fad91e56f23feb2295859d0a75c84ab3f30a4799e6602f6e8c064f9af348acffea1ed6d08e62475f2de1f2752fa261b8b5125a359ee383a0c
+EBUILD qt-creator-3.2.0.ebuild 3345 SHA256 b8b366c1544bf73667f72c1e7b0919c45b6f69ae0869d2fcd257af3e4a898fb4 SHA512 0ce194d4f6b77ad47fef88744767fe894a93652bfc58a2da905d3e36d3d735fe83c7dfcbd288e7afa02f736323b617847ebfd6649e4a7398821250e023e2d848 WHIRLPOOL 7f26ea656d835afc8c28eb2c20147e47500246f79f8952795c32fbc1a3aa2c7cfffb22816b909708b9de1804b2c12e25b4865b81bf18958135f28e5f5b4a386b
+MISC ChangeLog 26438 SHA256 be7bee8125d5d870e3c293f814cc0c71448920f16b49c6871fe21e77edcd844d SHA512 837baf7e3f9e8e9daa52034fe048cb988b958bad676e026ebf3d819996ff6250ce98578fd571cfcdc0e8332e11c96518f8aaeaaec89cdad9b98f94703e8f3d97 WHIRLPOOL c63b815af18520daa7bf5bfd44f0cb97a29a9012f772601dd68045fbf4eadb1f09fdb11ae3be26aea00a93759cbe5a681eac9ec84607ae3c2bf0818d73f41aee
 MISC metadata.xml 1505 SHA256 b092b8be6a218fd4b809fb1355930678614a7a59505db5bc2f47ecbe5dda4202 SHA512 6588ded27764a240bea9bf5f3c3fd96b7da41bcd778f751048f3aac690a3aaade6282fd38af26ad392dd10c675ca2449a0f4f5989c264646def70285b3727142 WHIRLPOOL 1919e7929074d8990b6b4730ee09e04dd0987ae9a4ab7ffb33a4adbf6c05c359fdafb9cd840e74a7a69350a5a09895e6277416fee42f774aa6cf910f86f20866
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJT4MMKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJT806BXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
-QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV95m4P/iV+CDrNrGV9ypbbcc1tfLJz
-UMt3i+TAXuHkjHZO781z2JhO620w2pbinIk4I8csqo7tTe8r48hUbsXGQ2y8tnZJ
-HXnJd0tT9PNsAPhSAhDKP7XBAKUkAEEQ3TEGaJ3dEAIfGLF0L5/H95E9HDqmUcet
-ThfnRWLCyDDg4128AW6xXUATpF/1luXFjjuKkI7ofZNfUqu0n6KWLGCxnFRrKQYE
-MhducKqsL+gmBnyIwCqXYBHiP+vwB123+GVLOq/KbkrUzI0sG9WiDNw224q6NKR7
-hyWskfQK3WfnBW92hRovd30gVUiDdZe2TyM2Wqth4L/8qMnFqWubDCY5vElZbdeu
-93JkhlpOzB93nKE6k4b9aykhpR2Su+eaK+SHe+gdviFW8yGX8voiljliBEzIw0CF
-PKV1f45dpEsirahHR/lYh65sL4ZEK/xM1RGvnr8m+w3vSOAzzcGDCNl/xPo2lR3M
-cwugVH5JU9uGW8gZfn0r0e1Rhqa9Jkhm7UiREaA+lvrIXLFrdhVo2fyHnCjNuspq
-JFW584RGxKier7g682fWGh/CeWdlHw6iknROqyVD3yAbFNmfjBkG35vZk5J4LzIh
-v3cd3KnZLuKt55JgE489DRiGjXZKHo1LKwQn2fPDLTuQ8XR2hX68NJmp0RxG8vDv
-wm0bzyypOSZfUlQP5GZK
-=gpHU
+QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9X38QAKVBjMGSUuw0gntedkQNnNpG
+CHFKGoVbpJEb12aSFjBD2u/SxDZRIoMoza98z2olTX/E7JfZqD7oJtoO79hScPmg
+8JSFgyj46UfF+L0oya6f/0fIr6vyc09k5eLfo4uXau4ocghnyFdt+IqNjfzUBwek
+fvhxjIT5OZamUzUk5IFoR7/+fM9twtwLDsHNSgMemkHlpQdfRN0X/xpCZxXkaRJJ
+b0KvsKEYtBwg0+hikPHWp3qRNIliWVawscnIb0c8Eld/Pqexg50WOonyRXfGixor
+swGb/A1SXLE10r8+bdW7l+nN7P5c4FITaKKGbu8k3qTd6ZBSF44TXvMg22OIhe5x
+uEwSTBISGcYUw5Up6gW2oqYetiaW2MXK0pDu5J2Y94PPJoosjS/l8YOslQJ5kNx4
+yBP2KFaE5nWzGJHBjoIqkH/EZZWLbAsANjGszcdzK3OZHEnF4VUFTNpbSiD0Jnfc
+DT7+vdVETzVr1YL5O2EemoUuwQnr2ZVKIdnFbT7yMSY4xGBBAUw+0lVDgYPf3uit
+Kyn2rlabmU9RDZiu3+6nLk2ZKqB6RQPLUmiuu1v2fBmyO5SbmFVI+Z76yToMfAZU
+pTHyx1qTZxi4W5KJQ7wE9PWLRc0ZnfW/Qyw96AAtu9dhmRTzpblpf+1cRh6W3TkK
+8ePCD3GOdi9LxIw/QX7t
+=D1YG
 -----END PGP SIGNATURE-----
