@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-qt/qt-creator/qt-creator-3.2.0_rc1.ebuild,v 1.3 2014/08/05 11:41:54 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-qt/qt-creator/qt-creator-3.2.0.ebuild,v 1.1 2014/08/19 13:17:45 pesa Exp $
 
 EAPI=5
 
