@@ -9,6 +9,6 @@ LICENSE=LGPL-2.1
 PDEPEND=autotools? ( sys-devel/autoconf ) bazaar? ( dev-vcs/bzr ) cmake? ( dev-util/cmake ) cvs? ( dev-vcs/cvs ) git? ( dev-vcs/git ) mercurial? ( dev-vcs/mercurial ) subversion? ( dev-vcs/subversion ) valgrind? ( dev-util/valgrind )
 RDEPEND==dev-libs/botan-1.10*[threads] >=dev-qt/designer-4.8.5:4 >=dev-qt/qtcore-4.8.5:4[ssl] >=dev-qt/qtdeclarative-4.8.5:4 >=dev-qt/qtgui-4.8.5:4 >=dev-qt/qthelp-4.8.5:4[doc?] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4 >=dev-qt/qtsvg-4.8.5:4 clang? ( >=sys-devel/clang-3.2:= ) >=sys-devel/gdb-7.2[client(+),python] examples? ( >=dev-qt/qtdemo-4.8.5:4 )
 SLOT=0
-SRC_URI=http://download.qt-project.org/development_releases/qtcreator/3.2/3.2.0-rc1/qt-creator-opensource-src-3.2.0-rc1.tar.gz
+SRC_URI=http://download.qt-project.org/official_releases/qtcreator/3.2/3.2.0/qt-creator-opensource-src-3.2.0.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	40136c5fe0002a0d3937e869ae4ee0e2	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=c4a045ebbe481ce89296f30a5452cafa
+_md5_=8c65215092cd5598b36835e438a057ef
