@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install
-DEPEND=x11-libs/gtk+:2 x11-libs/libnotify virtual/udev virtual/pkgconfig
-DESCRIPTION=A GTK+ battery icon which uses libudev to be lightweight and fast
-EAPI=5
-HOMEPAGE=https://github.com/ColinJones/cbatticon
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=x11-libs/gtk+:2 x11-libs/libnotify virtual/udev
-SLOT=0
-SRC_URI=https://github.com/ColinJones/cbatticon/archive/1.1.tar.gz -> cbatticon-1.1.tar.gz
-_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=abf0792f2fa521b49bedabc6da121858
