@@ -1,30 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST cbatticon-1.1.tar.gz 12423 SHA256 d1df34bfa92d2e2ace95674896dae5faf52fae1312be7b65fe1a15454103233d SHA512 8a11d6cc24b33555f3250848b9c42f9ec492df1ff153788bdff1d7cb6293aa564e798a15643bacdbe867540c0ddf0dae99e5e92ea134303dd6a2e70c84765814 WHIRLPOOL ebbf7a64f59fc973682ea4fe2d88f34ed75ae2a82cb206d700735e5321952e09ac4420fe3078707075a392a8c4ce5511469feb69a41c12186690ff75389fe90f
-DIST cbatticon-1.2.0.tar.gz 12586 SHA256 f5ebe91c8b91795efc7283ae567fd8e378d5ac40e588af03a43b26ff58b74ae8 SHA512 451a99767cdc267bb7e842a745319a6b077bf3e5feba91e3dbe0c6d68ad434b9ee0a77df71890caffb809b60bef3e50c4e97ccfb3cdeb69f719f63019a31acae WHIRLPOOL fab450d6cef39b925afd205001e417bd91ab95c3fec21a876811d66a87f0b0d00acf009f5c966863121d2dbe59a8575d5904eb795439d7592c7be79fd682fe5d
-DIST cbatticon-1.3.1.tar.gz 12719 SHA256 27002211c407095a11e906232e7ee7fd2355f3a1c42b5b464ce0796003e24cc1 SHA512 7dae91edd7fb7a9fb338c7ad076b21da712fbeeec7cfce8b0ec6608c22622d6605674a06a07077dd1b7321e75ad0d719aaea59b8f866b0a511dd5a4084bf771f WHIRLPOOL a44a3c220ef2470814fcf4b1e022643316ad05d43884709ebb30b0e2e603d243255f3d31665dc92588989789e9b5accb5ef8bf158561315c57c93410c4c60dad
 DIST cbatticon-1.3.2.tar.gz 12749 SHA256 40f5b80e9a405ce79ecca74bcd72778372729b2add63a9c4e3386908cfb8ad4c SHA512 492b0e9e16b7a14a8bf184d213af7c7366a2cd8bfe9fe91e935e95a72e8f5213029d8b32512961f142da9db3832dd5fa98f291223b0d473a133132614ed926aa WHIRLPOOL 78cc260cc9060931cea9b9fa87e0be81b33f74641cd09a4592911612ae78e3c0ee80c4e2f045c186f030f389946264e1468451068c4fe319d9247d30f227d9b5
-EBUILD cbatticon-1.1.ebuild 760 SHA256 f064b22593b7685edc48b087c7c1ff6a9beb91dcaa2a91523d413c4c21354df0 SHA512 dbfaaba69357d1f91f3517a35da6b3b24d5c2730840d4a7b3067c51662f342bb3035aa2a3c13d5d566040e611a2d6bbfa4364da4fcd4eca07d91ce865597ab56 WHIRLPOOL 059fe856f0f250e7165cb70c85e9215357d0508a8819fabb850e3bebe0ab28b74547b1eb420919b8f9cb276ed5d142884ab46218c74ce829b91062481003aea5
-EBUILD cbatticon-1.2.0.ebuild 741 SHA256 5542ea92ef04d3df23da306bacfa9851280b9cc04c42695870c629a0221426ba SHA512 22598c0eaab59153c4aa91cd57a489b8acac192c436feb9420ad09e1d54e4ec8ac6d56d7a69196b881cdf123f4937a9c1d9150f66b94d98a9e9857df9c1ebf7d WHIRLPOOL 4e45ab1e2c31b145bfa0d08310e94313120d5e68c2181f5deeda129b2a68925783ec350485167a0347091d11d38ae3c261a261ff4f297f3a2b47c8655374334c
-EBUILD cbatticon-1.3.1.ebuild 741 SHA256 be2c85c5a7c3ec9fb3eeda8fa0297b1446d9e17f1f7030e61702437d1bc160ea SHA512 3e1be759bb49650b2d99d90d598c11dd29ebfca138190de3dba8ee1a8b480e955f72996bae487704dc5c7167753423aa5dbaf78456da038da1b9f875145553d0 WHIRLPOOL 2906b943d17c6962c2992e15abfa813fe213b10044da273ded85b6e7cd2b0f367d8554f716a02a8055c138015a92e8a2e9dddb7def05d5b82bdf46020b100de2
+DIST cbatticon-1.4.0.tar.gz 13768 SHA256 8d220c96c390af034474b382f1d47680ca3b6d5c15af5f0284e73e4269a2c327 SHA512 94724bcf8907bb48741e0d42ccefbf5ff0dd825b46abbbbc92e928b27e549f8bc054fb57a5956d0387aaaf5a443faea481fc896bc06123486de60aa438a1f806 WHIRLPOOL aa97902c6a02723111143ea34ef6d246d97dd4217960be0474ee059abab474d6e5c15691fa803e24e691d7b7e039d0948df54700a4962d232ad405b2bf1905e4
 EBUILD cbatticon-1.3.2.ebuild 741 SHA256 8de11ba8124b071d0052953e1db2ebf0028b74df5083e6943bdc4b80d6f59024 SHA512 6629ad6aeaf2b1e679b60fd16d4f76950f98949946310eb380bf5a78029925e60fe3b90d6867d8848a5d2e742adeef3eb737b8c8277f10fbdf4baabcb78e2ac0 WHIRLPOOL 0cfb4690ae00aa4d7a3b579d772207e82d9b4e4526ff5ddf38130835681ef698481c3dfd946ed6b0899279e8a34f41d35088d81b6fdb3ba856188a09976a117e
-MISC ChangeLog 1535 SHA256 32633eaeef6b989035bab9207dbcdafdbb4de3c281c4ceaaae6e3092ae79d234 SHA512 0b09fad7955917d7ef7f2ec9296571b41b9b016e6bbd1f68e1453f0e8fb813bf7e1e84e562311f2c00a76e8122abef1a42268916aa35e12912cb7a8d3c66c154 WHIRLPOOL 65980c5170fb5161306b2b196319fc5f174883164a45452664968d385dd7585be67807d9c8ebc0845dd73eefadbb27f0d60083f97f7f673c82de9d8eb4050e46
+EBUILD cbatticon-1.4.0.ebuild 747 SHA256 ebe85f448af86133e43d97930036bdda2110d6027040810b81c87d8906c66525 SHA512 38e5a54bc62fcc3e898da2085bf3b499f62d446dc839487081dbfc330ea4ce1dc9545824425da117f4ba289587a39e693f497360cf4fdb0750631b99a4b396d6 WHIRLPOOL b1d2c1d91e8daa3d64a6739b381173e44c458ca3f07c5280893aa9f5f41e0c8dd9ecb843335e31cb46365ad476a5391c7408878e34adf340135ba0d01a4016a2
+MISC ChangeLog 1851 SHA256 95cdac165a873fd7f32bf85f662aa1a6db178d7b15a4fb0486bae14c57f87223 SHA512 1e28c75e941cf36e52a259b118f47588315418ce688e026d152c8f26db4f3dd8febe59fc34361edfb21721aa014609583cca0bffa680ab6169b86c971cbbc002 WHIRLPOOL 7fd77af85ffb9bdca4d50adefe2f1a0e2af3df7baaee07cc29d044f628ff7dfd0faea3c5327986d65bf5065eaf33d8fa9dfa649d39e88cb845ab4d7683b3db98
 MISC metadata.xml 262 SHA256 56be8376790c0f5f241ddafd3ed1b3068ce13f4751f8bf8e318ba4623f1150bc SHA512 f327aca9b62ca6a6ba5cb7dc7c003ebda21be3cc88d71d9cfa8c3960a87b5184e39da663367dfa8fbed598258a51924c025802036c345beb2ba2df30f137b238 WHIRLPOOL 0284fde5542adcffd34289c7db618c48d3494d7da25794259542669a3084c1e602b3f2b9b72ff28a1326087223f3276f21bdf42cb4ea9451faccc9dba9819d13
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCgAGBQJSENAuAAoJELp701BxlEWfPcIQAJHZCZXY3d833gWeWyfuqlG9
-s8amZ/Vo1WEsNHhzADWyZPkw5dSGXQ6v5jCe4RxN1uPcD5aH4AtgBhML9yklYnAb
-xLqmGN2EO+BF/BmZ3/Gsxy8yjZIR8ZvDSnfp6n4LM+Rgg+hsnq+3uF3jT7p+168Q
-omTfNyRviAWUua5+xj/b0xO1jHy+IMrVKd7PazgEAazfirUirrfBfTmbhKHhkFnZ
-tL8IgPRMGjQqQRx91+EBafY+/tFEVql6ueYzxhkuoKdqb0V7IXXoNdNJt/E0onsW
-Q8P2IoVDGBxQ9uSoqQoR+g50nPpieATklB+WkrdonnBBLcmP6pmFfWQz0q7X/2G6
-4CZOCOYTtFxyJIKcmC1JBzza5otY49wOJmtu6XyE6N8nSnybISJRrUHpY+2c4mYX
-6pXK7KUnWGdP1ppElzH4JI6D5+CtJHBiO7xEdHt++fk8+/ZxpHlP2SBTAvpundMs
-mSobFjoXmPRgWYSlcl9hMkCxn8/uD3plE3ZrpslqhY1ua3qo7Xv8byca4d4UqzqG
-F2qFo+8JUTOkxkhnK4K/BwQ9FAEJhLayaCgLQ7/DDF7YDa1f0CwcbNnIk8ZjtkmI
-sbRk4nPUyhwm+3a7Q9sNXQk44Z7npehv0VmMn7t9fPy6qi1WWYcsHvb4WaM7mGci
-IjYPMBi8dcWEEgBrOskp
-=R5s/
+iEYEAREIAAYFAlPzSLwACgkQVWmRsqeSphMfHwCfS88ToPpLzt4ZV0cIWdgId2p1
+xZIAn1QCU11A9EZLACpcq7wZyNEK+Rqu
+=fmsm
 -----END PGP SIGNATURE-----
