@@ -1,6 +1,15 @@
 # ChangeLog for x11-misc/cbatticon
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/cbatticon/ChangeLog,v 1.11 2013/08/18 13:46:27 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/cbatticon/ChangeLog,v 1.13 2014/08/19 12:53:14 jer Exp $
+
+  19 Aug 2014; Jeroen Roovers <jer@gentoo.org> cbatticon-1.4.0.ebuild:
+  Switch to x11-libs/gtk:3. Update DESCRIPTION.
+
+*cbatticon-1.4.0 (19 Aug 2014)
+
+  19 Aug 2014; Jeroen Roovers <jer@gentoo.org> -cbatticon-1.1.ebuild,
+  -cbatticon-1.2.0.ebuild, -cbatticon-1.3.1.ebuild, +cbatticon-1.4.0.ebuild:
+  Version bump.
 
   18 Aug 2013; Agostino Sarubbo <ago@gentoo.org> cbatticon-1.3.2.ebuild:
   Stable for x86, wrt bug #480782
