@@ -1,6 +1,12 @@
 # ChangeLog for dev-qt/qt-creator
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-qt/qt-creator/ChangeLog,v 1.32 2014/08/05 11:41:54 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-qt/qt-creator/ChangeLog,v 1.33 2014/08/19 13:17:45 pesa Exp $
+
+*qt-creator-3.2.0 (19 Aug 2014)
+
+  19 Aug 2014; Davide Pesavento <pesa@gentoo.org> +qt-creator-3.2.0.ebuild,
+  -qt-creator-3.2.0_rc1.ebuild:
+  Version bump.
 
   05 Aug 2014; Davide Pesavento <pesa@gentoo.org> qt-creator-3.2.0_rc1.ebuild:
   Tweak sed expression to correctly disable clang plugin. Bug 519030 by Uwe L.
